# readingscomsumer

./: .gitignore  CMakeLists.txt  CMakePresets.json  vcpkg-configuration.json  vcpkg.json
.devcontainer/: Dockerfile
src/: CMakeLists.txt  main.cpp  queuereader.cpp  queuereader.h
src/consumers/: accumulatedpower.cpp  accumulatedpower.h  accumulatedprice.cpp  accumulatedprice.h  consumer.h  livepower.cpp  livepower.h  power.cpp  power.h
src/parsers/: jsonmessage.cpp  jsonmessage.h
src/providers/: dayaheadprice.cpp  dayaheadprice.h  hour.h  idayaheadprice.h
test/: CMakeLists.txt  tst_accumulatedpower.cpp  tst_hour.cpp
